patch: Fix ToolBar overflow for IE11 and Edge

--- a/src/ToolBar/style/base.scss
+++ b/src/ToolBar/style/base.scss
@@ -18,6 +18,15 @@
   width: 100%;
   overflow: visible;
 
+  &:not(.#{$ZIPPY_TOOLBAR_ROOT_CLASS}--native-scroll) {
+    overflow: hidden;
+  }
+
+  *::-ms-backdrop,
+  & {
+    overflow: hidden;
+  } /* IE11 */
+
   *,
   *:before,
   *:after {
